--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: sperre
 github_username:  rsperre
 
 # Build settings
-theme: minima
+theme: jekyll-theme-tactile
 plugins:
   - jekyll-feed
 
