--- a/_config.yml
+++ b/_config.yml
@@ -21,14 +21,14 @@
 title: blog.sperre.org
 email: rsperre@sperre.org
 description: >- # this means to ignore newlines until "baseurl:"
-  I have created a blog! 
+  Sharing is Caring!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://blog.sperre.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sperre
 github_username:  rsperre
 
 # Build settings
-theme: jekyll-theme-tactile
+theme: minima
 plugins:
   - jekyll-feed
 
