--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,14 @@
 title: blog.sperre.org
 email: rsperre@sperre.org
 description: >- # this means to ignore newlines until "baseurl:"
-  Sharing is Caring!
+  Yet another blog about SharePoint, Office 365, 
+  PnP, SPFx, PowerShell and other things we need 
+  to collaborate in style!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://blog.sperre.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: sperre
 github_username:  rsperre
-
+author: "Rune Sperre"
 # Build settings
 theme: minima
 plugins:
