Added sitemap generator

--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ kramdown:
   syntax_highlighter: rouge
 plugins:
   - jekyll-feed
+  - jekyll-sitemap  
 
 # Exclude from processing.
 # The following items will not be processed, by default.
